# MLOps_Project

./: .gitignore  generate_data.py  pyproject.toml
.dvc/: config
.github/.workflows/: mlops-pipeline.yaml
.github/workflows/: mlops-pipeline.yaml
argocd/: application.yaml
k8s/: inference.yaml  service_account.yaml
models/: churn_model.pkl
