[project]
name = "mlops-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.43.46",
    "dvc>=3.67.1",
    "dvc-s3>=3.3.0",
    "fastapi>=0.139.2",
    "numpy>=2.5.1",
    "pandas>=3.0.3",
    "pydantic>=2.13.4",
    "scikit-learn>=1.9.0",
    "uvicorn>=0.51.0",
]
